[gd_scene load_steps=2 format=3 uid="uid://e4r8q2yw3n6xi"]

[ext_resource type="Script" path="res://addons/gfred2/dialogs/ship_special_hitpoints_editor.gd" id="1_h3m2p"]

[node name="ShipSpecialHitpointsEditor" type="Window"]
title = "Special Hitpoints"
position = Vector2i(0, 36)
size = Vector2i(300, 250)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_h3m2p")

[node name="Content" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="EnableContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="EnableSpecialHitpointsCheck" type="CheckBox" parent="Content/EnableContainer"]
layout_mode = 2
text = "Enable Special Hitpoints"

[node name="EnableSpecialShieldCheck" type="CheckBox" parent="Content/EnableContainer"]
layout_mode = 2
text = "Enable Special Shield"

[node name="HitpointsContainer" type="GridContainer" parent="Content"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5

[node name="HitpointsLabel" type="Label" parent="Content/HitpointsContainer"]
layout_mode = 2
text = "Hitpoints:"

[node name="HitpointsSpin" type="SpinBox" parent="Content/HitpointsContainer"]
layout_mode = 2
min_value = 1.0
max_value = 100000.0
value = 100.0
rounded = true

[node name="ShieldsContainer" type="GridContainer" parent="Content"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5

[node name="ShieldsLabel" type="Label" parent="Content/ShieldsContainer"]
layout_mode = 2
text = "Shield Strength:"

[node name="ShieldsSpin" type="SpinBox" parent="Content/ShieldsContainer"]
layout_mode = 2
max_value = 100000.0
value = 100.0
rounded = true

[node name="ShieldRegenLabel" type="Label" parent="Content/ShieldsContainer"]
layout_mode = 2
text = "Shield Regen Rate:"

[node name="ShieldRegenSpin" type="SpinBox" parent="Content/ShieldsContainer"]
layout_mode = 2
min_value = 0.1
max_value = 100.0
step = 0.1
value = 1.0
